--- a/Music.html
+++ b/Music.html
@@ -9,7 +9,7 @@
 <div>
 <img src = "http://f4.bcbits.com/img/0003924538_100.png" style = "width:1200px" id = "image1"/>
 <div id = "header">
-<a id = "music" href = "index.jsp">Home</a>
+<a id = "music" href = "index.html">Home</a>
 <a id = "music" href = "Music.html">Music</a>
 <a id = "music" href = "Store.html">News</a>
 <a id = "music" href = "Shows.html">Shows</a>
