--- a/New.html
+++ b/New.html
@@ -16,7 +16,7 @@
 </button>
 
 <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="demo-menu-lower-left">
-  <li class="mdl-menu__item"><a id = "music" href = "index.jsp">Home</a></li>
+  <li class="mdl-menu__item"><a id = "music" href = "index.html">Home</a></li>
   <li class="mdl-menu__item "><a id = "music" href = "Music.html">Music</a></li>
   <li class="mdl-menu__item"><a id = "music" href = "Store.html">Home</a></li>
   <li class="mdl-menu__item"><a id = "music" href = "Shows.html">Shows</a></li>
