--- a/Music.html
+++ b/Music.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Shows</title>
+<title>Music</title>
 <link type="text/css" rel="stylesheet" href="Music.css"/>
 </head>
 <body>
