--- a/Music.html
+++ b/Music.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Music</title>
-<link type="text/css" rel="stylesheet" href="Music.css"/>
+<meta charset="utf-8">
+  <link rel="stylesheet" href="bootstrap_music_style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div>
-<img src = "http://f4.bcbits.com/img/0003924538_100.png" style = "width:1200px" id = "image1"/>
-<div id = "header">
-<a id = "music" href = "index.html">Home</a>
-<a id = "music" href = "Music.html">Music</a>
-<a id = "music" href = "Store.html">News</a>
-<a id = "music" href = "Shows.html">Shows</a>
-</div>
-</div>
+<nav class="navbar navbar-default navbar-fixed-top">
+	  <div class="container-fluid">
+		<div class="navbar-header">
+		  <a class="navbar-brand" href="#">Face Value</a>
+		</div>
+		<ul class="nav navbar-nav">
+		  <li><a href="index.html">Home</a></li>
+		  <li class="active"><a href="Music.html">Music</a></li>
+		  <li><a href="Store.html">Store</a></li>
+		  <li><a href="Shows.html">Shows</a></li>
+		</ul>
+	  </div>
+	</nav>
 <div id="players">
 <iframe style=" display:block;border: 0; width: 500px; height: 895px;margin-top:20px;margin-left:auto;margin-right:auto;" src="https://bandcamp.com/EmbeddedPlayer/album=435716209/size=large/bgcol=ffffff/linkcol=0687f5/package=2257690288/transparent=true/" seamless><a href="http://facevalue.bandcamp.com/album/thick-as-thieves">Thick As Thieves by Face Value</a></iframe>
 <iframe style="border: 0; width: 500px; height: 994px;margin-top:20px;margin-left:auto;margin-right:auto;display:block;" src="https://bandcamp.com/EmbeddedPlayer/album=593859898/size=large/bgcol=ffffff/linkcol=0687f5/package=3607540079/transparent=true/" seamless><a href="http://facevalue.bandcamp.com/album/growing-up-young">Growing Up Young by Face Value</a></iframe>
