--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	  </div>
 	</nav>
     <div id="banner">
-		<img src="images\banner.png" alt="banner">
+		<img src="http://f4.bcbits.com/img/0003924538_100.png" alt="banner">
 	</div>
 	<div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
